syntax = "proto3";
import "google/protobuf/timestamp.proto";
package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message SensorEventProto {
  string id = 1; // идентификатор датчика
  google.protobuf.Timestamp timestamp = 2; // таймстемп события
  string hubId = 3; // идентификатор связанного хаба
  oneof payload {// данные события от конкретного устройства
    MotionSensorProto motion_sensor = 4;            // данные события датчика движения
    TemperatureSensorProto temperature_sensor = 5;  // данные события температурного датчика
    LightSensorProto light_sensor = 6;              // данные события датчика освещения
    ClimateSensorProto climate_sensor = 7;          // данные события климатического датчика
    SwitchSensorProto switch_sensor = 8;            // данные события датчика-переключателя
  }
}

message MotionSensorProto {
  int32 link_quality = 1; // Целое (1)
  bool  motion = 2; // Булево (2)
  int32 voltage = 3; // Целое (3)
}

message TemperatureSensorProto {
  int32 temperature_c = 1; // Целое (1)
  int32 temperature_f = 2; // Целое (2)
}

message LightSensorProto {
  int32 link_quality = 1; // Целое (1)
  int32 luminosity = 2; // Целое (2)
}

message ClimateSensorProto {
  int32 temperature_c = 1; // Целое (1)
  int32 humidity = 2; // Целое (2)
  int32 co2_level = 3; // Целое (3)
}

message SwitchSensorProto {
  bool state = 1; // Булево (1)
}