syntax = "proto3";

package telemetry.service.collector;

import "google/protobuf/empty.proto";
import "telemetry/messages/sensor_event.proto"; // ✅ путь должен совпадать с вашим деревом
import "telemetry/messages/hub_event.proto";    // ✅ путь должен совпадать с вашим деревом

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.collector";

service CollectorController {
  rpc CollectSensorEvent(telemetry.message.event.SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent(telemetry.message.event.HubEventProto)
      returns (google.protobuf.Empty);
}
